--- a/index.html
+++ b/index.html
@@ -56,53 +56,55 @@
         </div>
 
         <div class = "gallery-heading"><h3>Featured Items</h3></div>
-        <div class = "slideGroup">
-          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
+        <div class = "slidecontainer">
+          <div class = "slideGroup">
+            <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
 
-          <div class = "slides">
-            <img src = "./images/baseball bag.png"></img>
-            <h4>Baseball Goodie Bag</h4>
-            <h5>$3.80</h5>
-            <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
+            <div class = "slides">
+              <img src = "./images/baseball bag.png"></img>
+              <h4>Baseball Goodie Bag</h4>
+              <h5>$3.80</h5>
+              <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
+            </div>
+            <div class = "slides">
+              <img src = "./images/j.png"></img>
+              <h4>Deluxe Camouflage Goodie Bag</h4>
+              <h5>$6.25</h5>
+              <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
+            </div>
+            <div class = "slides">
+              <img src = "./images/fan-fare-01.jpg"></img>
+              <h4>Fan Fare Goodie Bag</h4>
+              <h5>$3.95</h5>
+              <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
+            </div>
+            <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
           </div>
-          <div class = "slides">
-            <img src = "./images/j.png"></img>
-            <h4>Deluxe Camouflage Goodie Bag</h4>
-            <h5>$6.25</h5>
-            <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
+          <div class = "slideGroup">
+            <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
+            <div class = "slides2">
+              <img src = "./images/ChocolateBag.jpg"></img>
+              <h4>Chocolate Candy Goodie Bag</h4>
+              <h5>$3.65</h5>
+              <h6>Min. Order is 50 Bags</h6>
+              <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
+            </div>
+            <div class = "slides2">
+              <img src = "./images/RewardBag.jpg"></img>
+              <h4>Rewards Goodie Bag</h4>
+              <h5>$1.80</h5>
+              <h6>Min. Order is 50 Bags</h6>
+              <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
+            </div>
+            <div class = "slides2">
+              <img src = "./images/SportsBulkBag.jpg"></img>
+              <h4>Wholesale Sports Goodie Bag</h4>
+              <h5>$1.80</h5>
+              <h6>Min. Order is 50 Bags</h6>
+              <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
+            </div>
+            <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
           </div>
-          <div class = "slides">
-            <img src = "./images/fan-fare-01.jpg"></img>
-            <h4>Fan Fare Goodie Bag</h4>
-            <h5>$3.95</h5>
-            <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
-          </div>
-          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
-        </div>
-        <div class = "slideGroup">
-          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
-          <div class = "slides2">
-            <img src = "./images/ChocolateBag.jpg"></img>
-            <h4>Chocolate Candy Goodie Bag</h4>
-            <h5>$3.65</h5>
-            <h6>Min. Order is 50 Bags</h6>
-            <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
-          </div>
-          <div class = "slides2">
-            <img src = "./images/RewardBag.jpg"></img>
-            <h4>Rewards Goodie Bag</h4>
-            <h5>$1.80</h5>
-            <h6>Min. Order is 50 Bags</h6>
-            <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
-          </div>
-          <div class = "slides2">
-            <img src = "./images/SportsBulkBag.jpg"></img>
-            <h4>Wholesale Sports Goodie Bag</h4>
-            <h5>$1.80</h5>
-            <h6>Min. Order is 50 Bags</h6>
-            <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
-          </div>
-          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
         </div>
       </div>
     </div>
