--- a/premade.html
+++ b/premade.html
@@ -35,6 +35,8 @@
         <div class = "item">
           <div>
             <img src = "./images/baseball bag.png"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Baseball Goody Bag</h3>
             <h4 class = "itemPrice">$3.80</h4>
           </div>
@@ -66,6 +68,8 @@
         <div class = "item">
           <div>
             <img src = "./images/j.png"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Deluxe Camouflage Goodie Bag</h3>
             <h4 class = "itemPrice">$6.25</h4>
           </div>
@@ -101,6 +105,8 @@
         <div class = "item">
           <div>
             <img src = "./images/DinosuarBag.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Dinosaur Goody Bag</h3>
             <h4 class = "itemPrice">$3.75</h4>
           </div>
@@ -133,6 +139,8 @@
         <div class = "item">
           <div>
             <img src = "./images/DeluxePrincess.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Deluxe Princess Goodie Bag</h3>
             <h4 class = "itemPrice">$5.75</h4>
           </div>
@@ -168,6 +176,8 @@
         <div class = "item">
           <div>
             <img src = "./images/barrel of slime.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Boys Will Be Boys</h3>
             <h4 class = "itemPrice">$7.10</h4>
           </div>
@@ -198,6 +208,8 @@
         <div class = "item">
           <div>
             <img src = "./images/diary.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Girls Wanna Have Fun</h3>
             <h4 class = "itemPrice">$7.95</h4>
           </div>
@@ -228,6 +240,8 @@
         <div class = "item">
           <div>
             <img src = "./images/MagicBagDeluxe.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Deluxe Magic Goodie Bag</h3>
             <h4 class = "itemPrice">$6.20</h4>
           </div>
@@ -259,6 +273,8 @@
         <div class = "item">
           <div>
             <img src = "./images/Big-kids-game-Bag.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Game Goodie Bag for Big Kids</h3>
             <h4 class = "itemPrice">$4.25</h4>
           </div>
@@ -288,6 +304,8 @@
         <div class = "item">
           <div>
             <img src = "./images/DeluxeKidsGameBag.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Deluxe Game Goodie Bag</h3>
             <h4 class = "itemPrice">$5.65</h4>
           </div>
@@ -319,6 +337,8 @@
         <div class = "item">
           <div>
             <img src = "./images/fan-fare-01.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Fan Fare Goodie Bag</h3>
             <h4 class = "itemPrice">$3.95</h4>
           </div>
