--- a/wholesale.html
+++ b/wholesale.html
@@ -35,6 +35,8 @@
         <div class = "item">
           <div>
             <img src = "./images/ChocolateBag.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Chocolate Candy Goodie Bag</h3>
             <h4 class = "itemPrice">$3.65</h4>
           </div>
@@ -59,6 +61,8 @@
         <div class = "item">
           <div>
             <img src = "./images/xctmpnkvZGY.png"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Standard Candy Goodie Bag</h3>
             <h4 class = "itemPrice">$2.40</h4>
           </div>
@@ -83,6 +87,8 @@
         <div class = "item">
           <div>
             <img src = "./images/RewardBag.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Rewards Goodie Bag</h3>
             <h4 class = "itemPrice">$1.80</h4>
           </div>
@@ -112,6 +118,8 @@
         <div class = "item">
           <div>
             <img src = "./images/SportsBulkBag.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Wholesale Sports Goodie Bag</h3>
             <h4 class = "itemPrice">$1.80</h4>
           </div>
@@ -141,6 +149,8 @@
         <div class = "item">
           <div>
             <img src = "./images/BULK-BAG2.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Wholesale Goodie Bag #1</h3>
             <h4 class = "itemPrice">$1.95</h4>
           </div>
@@ -171,6 +181,8 @@
         <div class = "item">
           <div>
             <img src = "./images/BulkBag6-01.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Wholesale Goodie Bag #2</h3>
             <h4 class = "itemPrice">$1.95</h4>
           </div>
@@ -200,6 +212,8 @@
         <div class = "item">
           <div>
             <img src = "./images/BulkBag5.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Wholesale Goodie Bag #3</h3>
             <h4 class = "itemPrice">$1.95</h4>
           </div>
@@ -229,6 +243,8 @@
         <div class = "item">
           <div>
             <img src = "./images/BulkBag4.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Wholesale Goodie Bag #4</h3>
             <h4 class = "itemPrice">$1.95</h4>
           </div>
@@ -258,6 +274,8 @@
         <div class = "item">
           <div>
             <img src = "./images/ChocolateBag.jpg"></img>
+          </div>
+          <div>
             <h3 class = "itemName">Economy Candy Goodie Bag</h3>
             <h4 class = "itemPrice">$1.95</h4>
           </div>
