--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
             </div>
             <div class = "slides">
-              <img src = "./images/j.png"></img>
+              <div class = "slidecontainer"><img src = "./images/j.png"></img></div>
               <h4>Deluxe Camouflage Goodie Bag</h4>
               <h5>$6.25</h5>
               <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
