--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
   <script type="text/javascript" src="./js/scripts.js"></script>
 </head>
-<body onload = "showDivs(slideIndex)">
+<body onload = "showDivs(slideIndex); showCart()">
   <div class="container">
     <p class = "cart" onclick ="showCart()">Your Cart</p>
     <div class = "cartDiv">
-      <h4>Selected Bags:</h4>
-      <button onclick = "clearCart()">Click to Clear your Cart</button>
+      <h3 style = "text-align: center; border-bottom: 1px solid black">Selected Bags:</h3>
       <span id = "cartBags"></span>
+      <button class = "remove" onclick = "clearCart()">Click to Clear your Cart</button>
     </div>
     <header>
       <a href = "./index.html"><img class ="logo" src = "./images/logo.png"></img></a>
@@ -41,12 +41,14 @@
             <img src = "./images/j.png"></img>
             <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
           </div>
+
           <div class="cell">
             <h3 style = "border-bottom: 1px solid grey;">Build-A-Bag</h3>
             <p>Choose the items to be put in your own, personalized goodie bag that we make and then send to you.</p>
             <img src = "./images/babribbon.png"></img>
             <a href = "./buildabag.html"><button class = "goTo">Design your own Goodie Bag</button></a>
           </div>
+
           <div class="cell">
             <h3 style = "border-bottom: 1px solid grey;">Wholesale Bags</h3>
             <p>Buy bags in bulk (50 or more) that have a pre-determined theme.</p>
@@ -54,6 +56,7 @@
             <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
           </div>
         </div>
+
 
         <div class = "gallery-heading"><h3>Featured Items</h3></div>
         <div class = "slidecontainer">
@@ -66,12 +69,14 @@
               <h5>$3.80</h5>
               <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
             </div>
+
             <div class = "slides">
               <div class = "slidecontainer"><img src = "./images/j.png"></img></div>
               <h4>Deluxe Camouflage Goodie Bag</h4>
               <h5>$6.25</h5>
               <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
             </div>
+
             <div class = "slides">
               <img src = "./images/fan-fare-01.jpg"></img>
               <h4>Fan Fare Goodie Bag</h4>
@@ -80,6 +85,8 @@
             </div>
             <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
           </div>
+
+
           <div class = "slideGroup">
             <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
             <div class = "slides2">
@@ -89,6 +96,7 @@
               <h6>Min. Order is 50 Bags</h6>
               <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
             </div>
+
             <div class = "slides2">
               <img src = "./images/RewardBag.jpg"></img>
               <h4>Rewards Goodie Bag</h4>
@@ -96,6 +104,7 @@
               <h6>Min. Order is 50 Bags</h6>
               <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
             </div>
+
             <div class = "slides2">
               <img src = "./images/SportsBulkBag.jpg"></img>
               <h4>Wholesale Sports Goodie Bag</h4>
