--- a/buildabag.html
+++ b/buildabag.html
@@ -59,7 +59,7 @@
               <h4>Price per Bag:</h4>
               <h5 id = "pricePerBag">$0.00</h5>
               <input id = "BABSelector" type= "number" value = "1" name = "quantity" min ="1" max="200"></input>
-              <button onclick = "addToCart()">Add to Cart</button>
+              <button style = "background: linear-gradient(to bottom, #ff3333, #ff9999);border-radius: 1em; color: white; padding: 1.1em;" onclick = "addToCart()">Add to Cart</button>
               <h4>Total Price:</h4>
               <h5 id = "totalPrice">$0.00</h5>
             </div>
